[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/tiles/door_open.png" type="Texture" id=1]
[ext_resource path="res://src/tiles/Door.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63.5, 16.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.5, 15 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.5, 12.5 )

[node name="Door" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ClosedShape" type="CollisionShape2D" parent="."]
position = Vector2( 64, 52 )
shape = SubResource( 2 )

[node name="OpenShape" type="CollisionShape2D" parent="."]
position = Vector2( 16, 54 )
shape = SubResource( 3 )

[node name="OpenShape2" type="CollisionShape2D" parent="."]
position = Vector2( 111, 54 )
shape = SubResource( 3 )

[node name="DoorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2( 63.5, 56 )
shape = SubResource( 1 )
[connection signal="body_entered" from="DoorArea" to="." method="_on_DoorArea_body_entered"]
[connection signal="body_exited" from="DoorArea" to="." method="_on_DoorArea_body_exited"]
